[custom-workflows] - Update contract to use an enum for status. (#70)
